--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,50 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #262626;
-}
+/* Light Mode */
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: theme('colors.gray.950');
-    --foreground: #e5e5e5;
-  }
+:root {
+  --background: theme('colors.gray.50');
+  --shadow: theme('colors.gray.300');
+  --surface: theme('colors.gray.100');
+  --foreground: #262626;
 }
 
 @theme inline {
   --color-primary: theme('colors.blue.700');
   --color-secondary: theme('colors.blue.800');
-
+  
   --color-background: var(--background);
+  --color-shadow: var(--shadow);
+  --color-surface: var(--surface);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
+
+/* Dark Mode */
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: theme('colors.gray.950');
+    --shadow: theme('colors.gray.600');
+    --surface: theme('colors.gray.800');
+    --foreground: #e5e5e5;
+  }
+
+  @theme inline {
+    --color-primary: theme('colors.blue.700');
+    --color-secondary: theme('colors.blue.800');
+    
+    --color-background: var(--background);
+    --color-shadow: var(--shadow);
+    --color-surface: var(--surface);
+    --color-foreground: var(--foreground);
+    --font-sans: var(--font-geist-sans);
+    --font-mono: var(--font-geist-mono);
+  }
+}
+
+/* All Modes */
 
 body {
   background: var(--background);
